<?xml version="1.0"?>
<package>
  <name>smartest</name>
  <version>0.0.0</version>
  <description>The smartest package</description>

  <maintainer email="daniel.meltz@gmail.com">Daniel</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
<build_depend>tinyxml</build_depend>

<build_depend>cmake_modules</build_depend>
<build_depend>robil_msgs</build_depend> 
<build_depend>fcl</build_depend> 

<run_depend>robil_msgs</run_depend>

<run_depend>message_runtime</run_depend>

</package>
