<?xml version="1.0"?>
<package>
  <name>per</name>
  <version>0.0.0</version>
  <description>The per package</description>
  <maintainer email="yuval@todo.todo">yuval</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>robil2conf</build_depend>
	<build_depend>gazebo_ros</build_depend>
	<build_depend>cognitao_io</build_depend>
	<build_depend>cognitao</build_depend>
	<build_depend>events_bus</build_depend>
	<build_depend>cognitao_event_bus_converter</build_depend>
	
	<run_depend>cognitao_io</run_depend>
	<run_depend>cognitao</run_depend>
	<run_depend>events_bus</run_depend>
	<run_depend>cognitao_event_bus_converter</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>robil2conf</run_depend>
	<run_depend>gazebo_ros</run_depend>
	  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <export>
  </export>
</package>
