<?xml version="1.0"?>
<package>
  <name>per</name>
  <version>0.0.0</version>
  <description>The per package</description>
  <maintainer email="yuval@todo.todo">yuval</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>robil2conf</build_depend>
	<build_depend>decision_making</build_depend>
	<build_depend>gazebo_ros</build_depend>
	<build_depend>decision_making_parser</build_depend>
	<build_depend>cv_bridge</build_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>robil2conf</run_depend>
	<run_depend>gazebo_ros</run_depend>
	<run_depend>decision_making</run_depend>
	<run_depend>decision_making_parser</run_depend>
	<run_depend>cv_bridge</run_depend>
	  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <export>
  </export>
</package>
