<?xml version="1.0"?>
<package>
  <name>pl_r2u</name>
  <version>0.0.0</version>
  <description>The pl_r2u package</description>

  <maintainer email="yuval@todo.todo">yuval</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
  <build_depend>robil2_msgs</build_depend>
  <run_depend>robil2_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  

  </export>
</package>