<?xml version="1.0"?>
<package>
  <name>pp</name>
  <version>0.0.0</version>
  <description>The pp package</description>
  <maintainer email="yuval@todo.todo">yuval</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>robil2conf</build_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>robil2conf</run_depend>

	<!-- for move_base -->	
	<build_depend>cognitao_io</build_depend>
	<build_depend>cognitao</build_depend>
	<build_depend>events_bus</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>cognitao_event_bus_converter</build_depend>
	<build_depend>cognitao_v2</build_depend>
	<run_depend>cognitao_io</run_depend>
	<run_depend>cognitao</run_depend>
	<run_depend>events_bus</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>nav_msgs</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>cognitao_event_bus_converter</run_depend>
	<run_depend>cognitao_v2</run_depend>
	<!-- for tf -->
	<build_depend>tf_geometry</build_depend>
	<run_depend>tf_geometry</run_depend>
	
	<!-- for plp -->
	<build_depend>plpcpp</build_depend>
	<run_depend>plpcpp</run_depend>
	
  <export>
  </export>
</package>
