<?xml version="1.0"?>
<package>
  <name>robil2conf</name>
  <version>0.0.0</version>
  <description>The robil2conf package</description>

  <maintainer email="yuval@todo.todo">yuval</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>robil_msgs</build_depend>
    <build_depend>cognitao_io</build_depend>
	<build_depend>cognitao</build_depend>
	<build_depend>events_bus</build_depend>
	<build_depend>cognitao_event_bus_converter</build_depend>
	<build_depend>cognitao_v2</build_depend>
  	<run_depend>roscpp</run_depend>
  	<run_depend>robil_msgs</run_depend>
  <export>

  </export>
</package>